Fix, bootstrap responsive now is only loaded when required
Fixes issue #14, bootstrap-responsive is only loaded when loading formtastic-plus-bootstrap/responsive

--- a/lib/assets/stylesheets/formtastic-plus-bootstrap/responsive.css.scss
+++ b/lib/assets/stylesheets/formtastic-plus-bootstrap/responsive.css.scss
@@ -5,6 +5,8 @@
  * have to have their own rows.
 */
 
+@import "bootstrap-responsive";
+
 // Phone to Portrait Tablet
 @media (max-width: 767px) {
   // this should only apply to formtastic forms
